// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/app/reducers/locations should handle a createPlantRequest for a missing plant at location 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
    ],
  },
  "2": Object {
    "_id": "2",
    "name": "xxx",
    "plantIds": Array [
      "xxx",
    ],
  },
  "3": Object {
    "_id": "3",
  },
}
`;

exports[`/app/reducers/locations should handle a createPlantRequest for an existing plant at location 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
      "plant-1",
    ],
  },
  "2": Object {
    "_id": "2",
    "name": "xxx",
    "plantIds": Array [
      "xxx",
    ],
  },
  "3": Object {
    "_id": "3",
  },
}
`;

exports[`/app/reducers/locations should handle a createPlantRequest for an existing plant at location 2`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
      "plant-1",
    ],
  },
  "2": Object {
    "_id": "2",
    "name": "xxx",
    "plantIds": Array [
      "xxx",
    ],
  },
  "3": Object {
    "_id": "3",
  },
}
`;

exports[`/app/reducers/locations should handle a deletePlantRequest 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [],
  },
  "2": Object {
    "_id": "2",
    "name": "xxx",
    "plantIds": Array [
      "xxx",
    ],
  },
  "3": Object {
    "_id": "3",
  },
}
`;

exports[`/app/reducers/locations should handle a deletePlantRequest when locationId is missing 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
    ],
  },
  "2": Object {
    "_id": "2",
    "name": "xxx",
    "plantIds": Array [
      "xxx",
    ],
  },
  "3": Object {
    "_id": "3",
  },
}
`;

exports[`/app/reducers/locations should handle a loadPlantsSuccess for an array of plants 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
      "plant-1",
    ],
  },
  "2": Object {
    "_id": "2",
    "name": "xxx",
    "plantIds": Array [
      "xxx",
    ],
  },
  "3": Object {
    "_id": "3",
  },
}
`;

exports[`/app/reducers/locations should handle a loadPlantsSuccess for an empty array of plants 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
    ],
  },
  "2": Object {
    "_id": "2",
    "name": "xxx",
    "plantIds": Array [
      "xxx",
    ],
  },
  "3": Object {
    "_id": "3",
  },
}
`;

exports[`/app/reducers/locations should load locations 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
    ],
  },
  "2": Object {
    "_id": "2",
    "name": "twenty-two",
    "plantIds": Array [
      "two",
      "twenty",
    ],
  },
  "3": Object {
    "_id": "3",
    "name": "thirty-three",
    "plantIds": Array [
      "three",
      "thirty",
    ],
  },
  "4": Object {
    "_id": "4",
    "name": "four",
    "plantIds": Array [],
  },
}
`;

exports[`/app/reducers/locations should load locations with undefined payload 1`] = `
Object {
  "1": Object {
    "_id": "1",
    "plantIds": Array [
      "one",
    ],
  },
  "2": Object {
    "_id": "2",
    "name": "xxx",
    "plantIds": Array [
      "xxx",
    ],
  },
  "3": Object {
    "_id": "3",
  },
}
`;
